# calculo-numerico-algoritmos

./: .gitignore  Cargo.toml  README.md
derivada/: Cargo.toml  derivada.rs
diferencial/euler/: euler.py
diferencial/runge-kutta/: runge-kutta-2.py  runge-kutta-4.py
funcao-de-zero/bissecao/: bissecao.cpp  bissecao.rs
funcao-de-zero/falsa-posicao/: falsa-posicao.rs
funcao-de-zero/ponto-fixo/: ponto-fixo.rs
funcao-de-zero/secante/: secante.rs
função de zero/: Cargo.toml  bisseção.cpp  bisseção.py  bisseção.rs
função de zero/bisseção/: Cargo.toml  bisseção.py  bisseção.rs
função de zero/falsa posição/: Cargo.toml  falsa posição.rs
função de zero/newton/: Cargo.toml  newton.rs
função de zero/ponto fixo/: Cargo.toml
função de zero/secante/: Cargo.toml
integral/2-45/: 2-45.rs
integral/quadratura-gaussiana-n-1/: quadratura-gaussiana-n-1.rs
integral/riemann/: riemann.rs
integral/simpson-1-3/: simpson-1-3.rs
integral/simpson-3-8/: simpson-3-8.rs
integral/trapezio/: trapezio.rs
interpolacao/lagrange/: lagrange.rs
interpolacao/newton/: newton.rs
matriz triangular superior/: Cargo.toml  matriz triangular superior.rs
sistemas lineares/decomposição de lu/: decomposição de lu.rs
sistemas lineares/eliminação de gauss/: Cargo.toml  eliminação de gauss 2.rs  eliminação de gauss.rs
sistemas lineares/fatoração de cholesky/: fatoração de cholesky.rs
sistemas-lineares/decomposicao-de-lu/: decomposicao-de-lu-2.rs
sistemas-lineares/eliminacao-de-gauss/: eliminacao-de-gauss.rs
sistemas-lineares/fatoracao-de-cholesky/: fatoracao-de-cholesky-complexos-tentativa.rs  fatoracao-de-cholesky-complexos.rs  fatoracao-de-cholesky.py  fatoracao-de-cholesky.rs
sistemas-lineares/gauss-jacobi/: gauss-jacobi.rs
sistemas-lineares/gauss-seidel/: gauss-seidel.rs
