[package]
name = "calculo-numerico-algoritmos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bisseção"
path = "./funcao-de-zero/bissecao/bissecao.rs"

[[bin]]
name = "falsa_posição"
path = "./funcao-de-zero/falsa-posicao/falsa-posicao.rs"

[[bin]]
name = "newton"
path = "./funcao-de-zero/newton/newton.rs"

[[bin]]
name = "ponto_fixo"
path = "./funcao-de-zero/ponto-fixo/ponto-fixo.rs"

[[bin]]
name = "secante"
path = "./funcao-de-zero/secante/secante.rs"

[[bin]]
name = "eliminação_de_gauss"
path = "./sistemas-lineares/eliminacao-de-gauss/eliminacao-de-gauss.rs"

[[bin]]
name = "eliminação_de_gauss2"
path = "./sistemas-lineares/eliminacao-de-gauss/eliminacao-de-gauss-2.rs"

[[bin]]
name = "decomposição_de_lu"
path = "./sistemas-lineares/decomposicao-de-lu/decomposicao-de-lu.rs"

[[bin]]
name = "decomposição_de_lu2"
path = "./sistemas-lineares/decomposicao-de-lu/decomposicao-de-lu-2.rs"

[[bin]]
name = "fatoração_de_cholesky"
path = "./sistemas-lineares/fatoracao-de-cholesky/fatoracao-de-cholesky.rs"

[[bin]]
name = "gauss_jacobi"
path = "./sistemas-lineares/gauss-jacobi/gauss-jacobi.rs"

[[bin]]
name = "gauss_seidel"
path = "./sistemas-lineares/gauss-seidel/gauss-seidel.rs"

[[bin]]
name = "lagrange"
path = "./interpolacao/lagrange/lagrange.rs"

[[bin]]
name = "interpolacao_newton"
path = "./interpolacao//newton/newton.rs"

[[bin]]
name = "riemann"
path = "./integral/riemann/riemann.rs"